<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:id="@+id/tvAreYouSureDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/r_u_sure"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnDeleteYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"/>
            <Button
                android:id="@+id/btnDeleteNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textColor="@color/black"
                android:backgroundTint="@color/teal_200"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"/>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>