<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".fragment.LoginFragment">

    <ImageView
        android:id="@+id/ivArrowBackToHomeLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/tvWelcomeLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/hallo_my_friend_hope_you_enjoy"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/purple_500"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/poppins_bold"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivArrowBackToHomeLogin"
        app:layout_constraintHorizontal_bias="0"/>

    <EditText
        android:id="@+id/etInputEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/poppins_medium_italic"
        android:textColorHint="@color/grey_500"
        android:textColor="@color/grey_500"
        android:textSize="15sp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bg_et"/>
    <EditText
        android:id="@+id/etInputPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:fontFamily="@font/poppins_medium_italic"
        android:textColorHint="@color/grey_500"
        android:textColor="@color/grey_500"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/etInputEmailLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_et"/>

    <ImageButton
        android:id="@+id/imgBtnLogin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInputPasswordLogin"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_baseline_arrow_forward_24"/>

    <TextView
        android:id="@+id/tvWarningCannotLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/can_t_login"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/warning"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light_italic"
        android:textSize="12sp"
        android:textColor="@color/grey_500"
        android:text="@string/forgot_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnLogin"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/tvDontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_account"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="1"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/purple_500"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_with_love_by_roisul"
        android:layout_marginBottom="10dp"
        android:textColor="@color/purple_500"
        android:textSize="10sp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>