<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".fragment.RegisterFragment">

    <ImageView
        android:id="@+id/ivArrowBackToLoginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0"/>

    <TextView
        android:id="@+id/tvWelcomeRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/purple_500"
        android:fontFamily="@font/poppins_bold"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivArrowBackToLoginRegister"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintHorizontal_bias="0"/>

    <TextView
        android:id="@+id/tvWarningRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/silahkan_isi_semua"
        android:fontFamily="@font/poppins_medium_italic"
        android:textSize="13sp"
        android:textColor="@color/warning"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvWelcomeRegister"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/etInputUsernameRegister"/>

    <EditText
        android:id="@+id/etInputUsernameRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/username"
        android:textColorHint="@color/grey_500"
        android:textColor="@color/grey_500"
        android:fontFamily="@font/poppins_medium_italic"
        android:textSize="15sp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:inputType="textPersonName"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_et"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeRegister"/>
    <EditText
        android:id="@+id/etInputEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:textColorHint="@color/grey_500"
        android:fontFamily="@font/poppins_medium_italic"
        android:textSize="15sp"
        android:textColor="@color/grey_500"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_et"
        app:layout_constraintTop_toBottomOf="@+id/etInputUsernameRegister"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <EditText
        android:id="@+id/etInputPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:textColorHint="@color/grey_500"
        android:fontFamily="@font/poppins_medium_italic"
        android:textSize="15sp"
        android:textColor="@color/grey_500"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:inputType="textPassword"
        android:background="@drawable/bg_et"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/etInputEmailRegister"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <EditText
        android:id="@+id/etInputRePasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/re_password"
        android:textColorHint="@color/grey_500"
        android:textColor="@color/grey_500"
        android:fontFamily="@font/poppins_medium_italic"
        android:textSize="15sp"
        android:paddingLeft="20dp"
        android:inputType="textPassword"
        android:paddingRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/etInputPasswordRegister"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bg_et"
        />

    <ImageButton
        android:id="@+id/imgBtnRegister"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        android:backgroundTint="@color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/etInputRePasswordRegister"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/tvHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_an_account"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="12sp"
        android:textColor="@color/purple_500"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnRegister"
        android:layout_marginTop="70dp"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_with_love_by_roisul"
        android:layout_marginBottom="10dp"
        android:textColor="@color/purple_500"
        android:textSize="10sp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>