<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".fragment.AddFragment">

    <ImageView
        android:id="@+id/ivGotoBackHomeFromFragmentAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        android:layout_margin="20dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/ivUploadContentClick"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_cloud_upload_24"
        android:layout_margin="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInputDeskripsiFragmentAdd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="0"/>

    <EditText
        android:id="@+id/etInputTitleFragmentAdd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_et"
        android:hint="@string/title"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        style="@style/DescriptionStyleEditText"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/etInputThumbnailFragmentAdd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_et"
        android:hint="@string/thumbnail"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        style="@style/DescriptionStyleEditText"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInputTitleFragmentAdd"/>

    <EditText
        android:id="@+id/etInputVideoUrlFragmentAdd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_et"
        android:hint="@string/video_url"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        style="@style/DescriptionStyleEditText"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInputThumbnailFragmentAdd"/>

    <EditText
        android:id="@+id/etInputDeskripsiFragmentAdd"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:gravity="top"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@+id/etInputVideoUrlFragmentAdd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        style="@style/DescriptionStyleEditText"
        android:background="@drawable/bg_et"/>
</androidx.constraintlayout.widget.ConstraintLayout>